--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/buzzbyte/CatchDROP">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/buzzbyte/CatchDROP/releases">RELEASES</a></li>
           <li class="downloads"><a href="https://github.com/buzzbyte/CatchDROP/zipball/master">ZIP</a></li>
           <li class="downloads"><a href="https://github.com/buzzbyte/CatchDROP/tarball/master">TAR</a></li>
           <li class="title">DOWNLOADS</li>
